Camino only - Bug 432983: Fix menu shortcuts for closing tabs/windows when exiting full-screen plugins. sr=pink